--- a/common/pubspec.yaml
+++ b/common/pubspec.yaml
@@ -47,8 +47,6 @@ dependencies:
   amazon_cognito_identity_dart_2: ^3.5.0
   flutter_dotenv: ^5.1.0
 
-
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,6 +64,7 @@ flutter:
   # To add Flutter specific assets to your application, add an assets section,
   # like this:
   assets:
+    - .env
     - assets/images/icon/kakao_icon.png
     - assets/images/icon/naver_icon.png
     - assets/images/icon/widyu_logo.png
