--- a/common/pubspec.yaml
+++ b/common/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_switch: ^0.3.2
   amazon_cognito_identity_dart_2: ^3.5.0
   flutter_dotenv: ^5.1.0
+  image_picker: ^1.0.4
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +67,7 @@ flutter:
   # like this:
   assets:
     - .env
-    - assets/images/icon/kakao_icon.png
-    - assets/images/icon/naver_icon.png
-    - assets/images/icon/widyu_logo.png
+    - assets/images/icon/
     - assets/images/account/
     - assets/images/account/people.png
     - assets/images/account/background.png
