--- a/young/pubspec.yaml
+++ b/young/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   permission_handler: ^10.0.0
   flutter_screenutil: ^5.6.0
   flutter_switch: ^0.3.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
