--- a/old/pubspec.yaml
+++ b/old/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   easy_stepper: ^0.6.0
   geolocator: ^10.0.0
   permission_handler: ^10.0.0
+  camera: ^0.10.5+5
 
 
 dev_dependencies:
@@ -58,9 +59,6 @@ flutter:
 
   # To add Flutter specific assets to your application, add an assets section,
   # like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
