--- a/young/pubspec.yaml
+++ b/young/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_screenutil: ^5.6.0
   flutter_switch: ^0.3.2
   intl: ^0.17.0
+  image: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +61,8 @@ flutter:
   # To add Flutter specific assets to your application, add an assets section,
   # like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #   - old/a_dot_burr.jpeg
+  #   - old/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
