--- a/common/pubspec.yaml
+++ b/common/pubspec.yaml
@@ -71,15 +71,16 @@ flutter:
   # like this:
   assets:
 #    - .env
-    - assets/images/
-    - assets/images/account/
-    - assets/images/album/
-    - assets/images/common/
-    - assets/images/goal/
-    - assets/images/icon/
-    - assets/images/icon/mission/
-    - assets/images/popup/
-    - assets/images/user/
+    - assets/common/
+    - assets/common/account/
+    - assets/common/album/
+    - assets/common/common/
+    - assets/common/goal/
+    - assets/common/icon/
+    - assets/common/icon/mission/
+    - assets/common/popup/
+    - assets/common/user/
+    - assets/young/health-information/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -115,5 +116,5 @@ flutter:
   # identifiers, which may be completely independent or the same as these.
   module:
     androidX: true
-    androidPackage: com.example.images
-    iosBundleIdentifier: com.example.images
+    androidPackage: com.example.common
+    iosBundleIdentifier: com.example.common
