--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   easy_stepper: ^0.6.0
   geolocator: ^10.0.0
   permission_handler: ^10.0.0
+  video_player: ^2.8.1
   flutter_switch: ^0.3.2
   amazon_cognito_identity_dart_2: ^3.5.0
   flutter_dotenv: ^5.1.0
@@ -55,6 +56,8 @@ dependencies:
   flutter_blurhash: ^0.7.0
   fl_chart: ^0.45.0
   chart_sparkline: ^1.0.14
+  video_editor: ^3.0.0
+  chewie: ^1.7.4
 
 
 dev_dependencies:
@@ -92,6 +95,7 @@ flutter:
     - assets/common/goal-conduct/
     - assets/common/alarm/
     - assets/common/health-information/graph/
+    - assets/common/health-information/grey/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
