--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   webview_flutter: ^2.8.0
   dio: ^5.4.3+1
   video_thumbnail: ^0.5.3
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
