--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
+
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 
 
@@ -42,20 +43,20 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.2
   fluttertoast: ^8.0.9
-  easy_stepper: ^0.6.0
-  geolocator: ^10.0.0
-  permission_handler: ^10.0.0
+  easy_stepper: ^0.8.5+1
+  geolocator: ^13.0.1
+  permission_handler: ^11.3.1
   video_player: ^2.8.1
   flutter_switch: ^0.3.2
   amazon_cognito_identity_dart_2: ^3.5.0
   flutter_dotenv: ^5.1.0
   image_picker: ^1.0.4
   intl: ^0.18.1
-  image: ^3.0.1
-  camera: ^0.10.5+5
-  flutter_blurhash: ^0.7.0
+  image: ^4.2.0
+  camera: ^0.11.0+2
+  flutter_blurhash: ^0.8.2
   video_trimmer: ^3.0.1
-  fl_chart: ^0.45.0
+  fl_chart: ^0.69.0
   chart_sparkline: ^1.0.14
   video_editor: ^3.0.0
   chewie: ^1.7.4
@@ -63,11 +64,11 @@ dependencies:
   flutter_svg: ^2.0.5
   remedi_kopo: ^0.0.2
   dots_indicator: ^3.0.0
-  blur: ^3.1.0
+  blur: ^4.0.0
   contacts_service: ^0.6.3
   flutter_sms: ^2.3.3
-  firebase_core: ^2.24.2
-  firebase_messaging: ^14.7.10
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
   flutter_local_notifications: ^17.1.2
   webview_flutter: ^2.8.0
   dio: ^5.4.3+1
@@ -76,12 +77,13 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.9.0
   google_maps_flutter: ^2.2.8
+  workmanager: ^0.5.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 
 flutter:
